# app-vitals-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
scripts/: generate_trello_token.py
src/app_vitals_mcp/: __init__.py
src/app_vitals_mcp/servers/: __init__.py
src/app_vitals_mcp/servers/toggl/: README.md  __init__.py  client.py  config.py  main.py  models.py  server.py  services.py
src/app_vitals_mcp/servers/trello/: README.md  __init__.py  client.py  config.py  main.py  models.py  server.py  services.py
tests/: __init__.py  conftest.py
tests/servers/: __init__.py
tests/servers/toggl/: __init__.py  test_client.py  test_integration.py  test_server.py
tests/servers/trello/: __init__.py  test_client.py  test_integration.py  test_server.py
